--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -4,5 +4,5 @@
     <h1>Payment Information</h1>
     <p>Amount: {{ payment_info.amount }}</p>
     <p>Currency: {{ payment_info.currency }}</p>
-    <img src="{{ payment_info.qr_code }}" alt="QR Code">
+    <img src="{{ payment_info.metadata.qr_code }}" alt="QR Code">
 {% endblock %}
